--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <div class="container">
         <div class="header_body">
-          <img src="/assets/images/l.svg" alt="logo" class="header_logo" />
+          <img src="./assets/images/l.svg" alt="logo" class="header_logo" />
           <div class="body-right">
             <nav class="body-right_nav">
               <ul class="body-right_list">
@@ -46,7 +46,8 @@
       <div class="top_body">
         <div class="top_left">
           <div class="top_left-top">
-            <img src="/assets/images/top.svg" alt="icon" />Answer five questions
+            <img src="./assets/images/top.svg" alt="icon" />Answer five
+            questions
           </div>
           <h2 class="top_left-title">
             A single platform for&nbsp;searching educational
@@ -57,7 +58,10 @@
           </div>
           <button class="top_left-btn btn-violet">Leave</button>
         </div>
-        <div class="top_right"></div>
+        <div
+          style="background-image: url(./assets/images/topR.png)"
+          class="top_right"
+        ></div>
       </div>
     </section>
     <section class="apply">
@@ -86,7 +90,7 @@
                 <div class="swiper-slide slide">
                   <div class="slide_top">
                     <img
-                      src="/assets/images/sl1.png"
+                      src="./assets/images/sl1.png"
                       alt="slider"
                       class="slide_top-img"
                     />
@@ -102,7 +106,7 @@
                     <div class="slide_bottom-btn">
                       More
                       <img
-                        src="/assets/images/violetArr.svg"
+                        src="./assets/images/violetArr.svg"
                         alt="arrow"
                         class="slide_bottom-btnArrow"
                       />
@@ -112,7 +116,7 @@
                 <div class="swiper-slide slide">
                   <div class="slide_top">
                     <img
-                      src="/assets/images/sl2.png"
+                      src="./assets/images/sl2.png"
                       alt="slider"
                       class="slide_top-img"
                     />
@@ -128,7 +132,7 @@
                     <div class="slide_bottom-btn">
                       More
                       <img
-                        src="/assets/images/violetArr.svg"
+                        src="./assets/images/violetArr.svg"
                         alt="arrow"
                         class="slide_bottom-btnArrow"
                       />
@@ -138,7 +142,7 @@
                 <div class="swiper-slide slide">
                   <div class="slide_top">
                     <img
-                      src="/assets/images/sl3.png"
+                      src="./assets/images/sl3.png"
                       alt="slider"
                       class="slide_top-img"
                     />
@@ -154,7 +158,7 @@
                     <div class="slide_bottom-btn">
                       More
                       <img
-                        src="/assets/images/violetArr.svg"
+                        src="./assets/images/violetArr.svg"
                         alt="arrow"
                         class="slide_bottom-btnArrow"
                       />
@@ -164,7 +168,7 @@
                 <div class="swiper-slide slide">
                   <div class="slide_top">
                     <img
-                      src="/assets/images/sl1.png"
+                      src="./assets/images/sl1.png"
                       alt="slider"
                       class="slide_top-img"
                     />
@@ -180,7 +184,7 @@
                     <div class="slide_bottom-btn">
                       More
                       <img
-                        src="/assets/images/violetArr.svg"
+                        src="./assets/images/violetArr.svg"
                         alt="arrow"
                         class="slide_bottom-btnArrow"
                       />
@@ -193,14 +197,14 @@
               <div class="button-prev">
                 <img
                   class="navig"
-                  src="/assets/images/prv.svg"
+                  src="./assets/images/prv.svg"
                   alt="prevSlide"
                 />
               </div>
               <div class="button-next">
                 <img
                   class="navig"
-                  src="/assets/images/nxt.svg"
+                  src="./assets/images/nxt.svg"
                   alt="nextSlide"
                 />
               </div>
